objects/Order/fields/Boomi_POC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Boomi_POC_End_Date__c</fullName>
    <description>Do not delete, used in Integration</description>
    <formula>POC_Max_End_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used In POC Order creation process only, End date+1</inlineHelpText>
    <label>Boomi POC End Date</label>
    <type>Date</type>
</CustomField>