objects/Order/fields/ELV_Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>ELV_Renewal_Term__c</fullName>
    <label>Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>