objects/Order/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to display End Customer on NS invoice.  Included in Boomi Integration.</description>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>