objects/Order/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <formula>IF(ISBLANK(Quote.ELV_Partner__c), Account.Netsuite_ID__c, Quote.ELV_Partner__r.Netsuite_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity ID</label>
    <type>Text</type>
</CustomField>