objects/Order/fields/Integration_Result__c.field-meta.xml
<CustomField>
    <fullName>Integration_Result__c</fullName>
    <label>Integration Result</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>