objects/Order/fields/Max_Order_Terms__c.field-meta.xml
<CustomField>
    <fullName>Max_Order_Terms__c</fullName>
    <formula>(YEAR( POC_Max_End_Date__c) - YEAR(POC_Min_Start_Date__c))*12 - MONTH(POC_Min_Start_Date__c) + MONTH(POC_Max_End_Date__c) + 
((DAY(POC_Max_End_Date__c) - DAY(POC_Min_Start_Date__c) + 1) / 
CASE(MONTH(POC_Max_End_Date__c), 
4,30, 
6,30, 
9,30, 
11,30, 
2, IF(OR( MOD( YEAR(POC_Max_End_Date__c ), 400 ) = 0, AND( MOD( YEAR(POC_Max_End_Date__c), 4 ) = 0, MOD( YEAR( POC_Max_End_Date__c), 100 ) != 0 ) ),29,28), 
31) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Order Terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>