objects/Order/fields/Nue_Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>Nue_Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this Order was created or updated via the Nue migration tool.</description>
    <label>Migrated Record</label>
    <type>Checkbox</type>
</CustomField>