objects/Order/fields/Owner_Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department_ID__c</fullName>
    <formula>Opportunity.Owner.Department_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Department ID</label>
    <type>Text</type>
</CustomField>