objects/Order/fields/Owner_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Location_ID__c</fullName>
    <formula>Opportunity.Owner.Location_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Location ID</label>
    <type>Text</type>
</CustomField>