objects/Order/fields/Owner_NS_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_NS_ID__c</fullName>
    <description>Do not delete, used in integration</description>
    <formula>Opportunity.Owner.NS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NS ID of the Opportunity Owner</inlineHelpText>
    <label>Owner NS ID</label>
    <type>Text</type>
</CustomField>