objects/Order/fields/POC_Min_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Min_Start_Date__c</fullName>
    <label>POC Min Start Date</label>
    <summarizedField>OrderItem.ServiceDate</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>