objects/Order/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <formula>IF(ISBLANK(Quote.ELV_Partner__c), &quot;End User&quot;, &quot;Reseller&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller NS</label>
    <type>Text</type>
</CustomField>