objects/Order/fields/Reseller_NS__c.field-meta.xml
<CustomField>
    <fullName>Reseller_NS__c</fullName>
    <formula>IF(ISBLANK(Quote.ELV_Partner__c), &quot;1&quot;, &quot;2&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller NS</label>
    <type>Text</type>
</CustomField>