objects/Order/fields/Ruby__Actions__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Actions__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/cmp/Ruby__orderLineEditorContainer?c__orderId=&quot; + Id + &quot;&amp;c__cacheBooster=&quot; + TEXT(UNIXTIMESTAMP(NOW())), IMAGE(&quot;/resource/Ruby__Actions/EditLines.svg&quot;, &quot;&quot;, 14, 14) + &quot; &quot; + &quot;Edit Products&quot;)</formula>
    <label>Actions</label>
    <type>Text</type>
</CustomField>