objects/Order/fields/Ruby__ACV__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ACV__c</fullName>
    <description>Annual Contractual Revenue (ACV) summarized from the ACV all line items that are not summary line items.</description>
    <inlineHelpText>Annual Contractual Revenue (ACV) summarized from the ACV line items that are not summary line items.</inlineHelpText>
    <label>ACV(Deprecated)</label>
    <summarizedField>OrderItem.Ruby__DeltaACV__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Ruby__LineType__c</field>
        <operation>notEqual</operation>
        <value>SummaryItem</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Ruby__LineType__c</field>
        <operation>notEqual</operation>
        <value>SplitItem</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>