objects/Order/fields/Ruby__BillCycleDay__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillCycleDay__c</fullName>
    <description>The billing cycle day.</description>
    <inlineHelpText>The billing cycle day.</inlineHelpText>
    <label>Bill Cycle Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__Bill_Cycle_Day</valueSetName>
    </valueSet>
</CustomField>