objects/Order/fields/Ruby__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account used for billing.</description>
    <inlineHelpText>The account used for billing.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Orders</relationshipLabel>
    <relationshipName>BillingOrders</relationshipName>
    <type>Lookup</type>
</CustomField>