objects/Order/fields/Ruby__BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillingPeriod__c</fullName>
    <description>The billing period.</description>
    <inlineHelpText>The billing period.</inlineHelpText>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__BillingPeriods</valueSetName>
    </valueSet>
</CustomField>