objects/Order/fields/Ruby__CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CancellationDate__c</fullName>
    <description>The date when the order is cancelled.</description>
    <inlineHelpText>The date when the order is cancelled.</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>