objects/Order/fields/Ruby__Discount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Discount__c</fullName>
    <description>The discretionary discount (in percentage) applied to the quote.  The discount percentage can also be automatically calculated from the Discount Amount or Total Price.</description>
    <inlineHelpText>The discretionary discount (in percentage) applied to the quote.  The discount percentage can also be automatically calculated from the Discount Amount or Total Price.</inlineHelpText>
    <label>Discount %</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>