objects/Order/fields/Ruby__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DiscountAmount__c</fullName>
    <description>The total discretionary discount amount applied to the quote.</description>
    <inlineHelpText>The total discretionary discount amount applied to the quote.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>