objects/Order/fields/Ruby__IsShippingAddressSameAsBilling__c.field-meta.xml
<CustomField>
    <fullName>Ruby__IsShippingAddressSameAsBilling__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if Billing Address is the same as Shipping Address</description>
    <inlineHelpText>Indicates if Billing Address is the same as Shipping Address</inlineHelpText>
    <label>Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>