objects/Order/fields/Ruby__LineBucket__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LineBucket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Bucket</label>
    <referenceTo>Ruby__LineBucket__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>