objects/Order/fields/Ruby__ListTotal__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ListTotal__c</fullName>
    <description>List Total</description>
    <label>List Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>