objects/Order/fields/Ruby__OrderMetricsExtension__c.field-meta.xml
<CustomField>
    <fullName>Ruby__OrderMetricsExtension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Metrics Extension</label>
    <referenceTo>Ruby__OrderMetricsExtension__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>