objects/Order/fields/Ruby__OrderPlacedDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__OrderPlacedDate__c</fullName>
    <label>Order Placed Date</label>
    <type>Date</type>
</CustomField>