objects/Order/fields/Ruby__PartnerPayoutAmount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PartnerPayoutAmount__c</fullName>
    <description>Dollar amount of Partner Discount at Header Level. Calculated as Net Sales Price × Partner Discount %. For reporting.</description>
    <inlineHelpText>Dollar amount of Partner Discount at Header Level. Calculated as Net Sales Price × Partner Discount %.</inlineHelpText>
    <label>Partner Payout</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>