objects/Order/fields/Ruby__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PaymentMethod__c</fullName>
    <description>Payment methods to be used for the payments of this order.</description>
    <inlineHelpText>Payment methods to be used for the payments of this order.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__PaymentMethods</valueSetName>
    </valueSet>
</CustomField>