objects/Order/fields/Ruby__PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PaymentTerm__c</fullName>
    <description>The order payment term.</description>
    <inlineHelpText>The order payment term.</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__PaymentTerms</valueSetName>
    </valueSet>
</CustomField>