objects/Order/fields/Ruby__SellerTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SellerTotalAmount__c</fullName>
    <description>Total Revenue received before Tax at Header Level. Goes into ACV ARR TCV calculation.</description>
    <inlineHelpText>Total Revenue received before Tax at Header Level. Goes into ACV ARR TCV calculation.</inlineHelpText>
    <label>Net Seller Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>