objects/Order/fields/Ruby__SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionEndDate__c</fullName>
    <description>The Subscription End Date, which is defaulted to the Subscription Start Date plus the Term (in Month). It is typically calculated automatically from Start Date and Subscription Term. In the Co-Term scenario, the Subscription Term is automatically calculated when the End Date is changed.</description>
    <inlineHelpText>The Subscription End Date, which is defaulted to the Subscription Start Date plus the Term (in Month). It is typically calculated automatically from Start Date and Subscription Term. In the Co-Term scenario, the Subscription Term is automatically calculated when the End Date is changed.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>