objects/Order/fields/Ruby__SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionStartDate__c</fullName>
    <description>The Subscription Start Date, which is defaulted to the Order Start Date, but can be updated for individual Order Products.</description>
    <inlineHelpText>The Subscription Start Date, which is defaulted to the Order Start Date, but can be updated for individual Order Products.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>