objects/Order/fields/Ruby__SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionTerm__c</fullName>
    <description>The subscription term measured by UOM.  Default value is 1 for a One-Time product; 1 if UOM’s Term Dimension is Year; 12 if UOM’s Term Dimension is Month.</description>
    <inlineHelpText>The subscription term measured by UOM. Default value is 1 for a One-Time product; 1 if UOM’s Term Dimension is Year; 12 if UOM’s Term Dimension is Month.</inlineHelpText>
    <label>Subscription Term</label>
    <precision>16</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>