objects/Order/fields/Ruby__SubscriptionTermDimension__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionTermDimension__c</fullName>
    <label>Subscription Term Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>