objects/Order/fields/Ruby__Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Sync_Time__c</fullName>
    <description>Time of The Job Sync</description>
    <label>Sync Time</label>
    <type>DateTime</type>
</CustomField>