objects/Order/fields/Ruby__SystemDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SystemDiscountAmount__c</fullName>
    <description>The total system discount amount of all line items.</description>
    <inlineHelpText>The total system discount amount applied to all line items.  This value is automatically calculated by the system according to the price tags defined at the system level, and is not editable.</inlineHelpText>
    <label>System Discount Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>