objects/Order/fields/Ruby__TaxationAccount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxationAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to an Account whose Id (customerId) and AccountNumber, or Name when AccountNumber is blank (customerCode), are used as the customer identity sent to tax engines instead of this Order&apos;s billing Account. Tax-calculation only — does not affect invoice ownership, billing address, or any other billing logic. Overrides the Account-level TaxationAccount when set.</description>
    <inlineHelpText>When set, the referenced Account&apos;s Id (customerId) and AccountNumber, or Name when AccountNumber is blank (customerCode), are used as the customer identity sent to tax engines for this Order. Overrides the Quote and Account level.</inlineHelpText>
    <label>Taxation Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Taxation Account)</relationshipLabel>
    <relationshipName>TaxationOrders</relationshipName>
    <type>Lookup</type>
</CustomField>