objects/Order/fields/Ruby__TaxationCity__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxationCity__c</fullName>
    <description>City of the address used for tax-jurisdiction resolution. Part of the Taxation address override group; takes effect only when TaxationCountry is non-null.</description>
    <inlineHelpText>City of the address used for tax calculation.</inlineHelpText>
    <label>Taxation City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>