objects/Order/fields/Ruby__TaxationPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxationPostalCode__c</fullName>
    <description>Postal/ZIP code of the address used for tax-jurisdiction resolution. Part of the Taxation address override group; takes effect only when TaxationCountry is non-null.</description>
    <inlineHelpText>Postal or ZIP code of the address used for tax calculation.</inlineHelpText>
    <label>Taxation Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>