objects/Order/fields/Ruby__TaxationStreet__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxationStreet__c</fullName>
    <description>Street address used for tax-jurisdiction resolution. When TaxationCountry is non-null, the five Taxation fields override the default ship-to address used by the tax engine.</description>
    <inlineHelpText>Street of the address used for tax calculation. Populate together with TaxationCountry to override the default ship-to jurisdiction.</inlineHelpText>
    <label>Taxation Street</label>
    <type>TextArea</type>
</CustomField>