objects/Order/fields/Ruby__TaxMessage__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxMessage__c</fullName>
    <label>Tax Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>