objects/Order/fields/Ruby__TodayCMRR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TodayCMRR__c</fullName>
    <label>Today&apos;s CMRR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>