objects/Order/fields/Ruby__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TotalAmount__c</fullName>
    <description>otal Amount summarized from the total price of all line items that are not summary line items. Total Amount of each line item is equal to Total Price plus Tax Amount.</description>
    <inlineHelpText>otal Amount summarized from the total price of all line items that are not summary line items. Total Amount of each line item is equal to Total Price plus Tax Amount.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>