objects/Order/fields/Ruby__TotalAmountWithoutTax__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TotalAmountWithoutTax__c</fullName>
    <description>Total Amount Without Tax regardless of the Tax Mode. It is calculated as Total Amount - Tax.</description>
    <formula>Ruby__TotalAmount__c - Ruby__Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount Without Tax regardless of the Tax Mode. It is calculated as Total Amount - Tax.</inlineHelpText>
    <label>Total Amount Without Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>