objects/Order/fields/Send_error_email__c.field-meta.xml
<CustomField>
    <fullName>Send_error_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send error email</label>
    <type>Checkbox</type>
</CustomField>