objects/Order/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity.StageName, &quot;POC&quot;), Account.NS_Subsidiary__c, Quote.ELV_Legal_Entity__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Subsidiary</label>
    <type>Text</type>
</CustomField>