objects/Order/fields/Subsidiary_NS__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_NS__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity.StageName, &quot;POC&quot;), Account.NS_Subsidiary_ID__c, Quote.ELV_Legal_Entity__r.NS_Legal_Entity_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Subsidiary ID</label>
    <type>Text</type>
</CustomField>