objects/Order/fields/Tax_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Company_Code__c</fullName>
    <inlineHelpText>1 - Tanium Inc., 15 - Tanium Federal, 25 - 824TM LLC, 50 - Tanium Canada Technology ULC</inlineHelpText>
    <label>Tax Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>