objects/Order/fields/X18_Price_book_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Price_book_ID__c</fullName>
    <formula>Opportunity.Pricebook2.X18_D_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Price book ID</label>
    <type>Text</type>
</CustomField>