objects/Order/validationRules/Block_Migration_Order_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Migration_Order_Activation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Name = &quot;Order for Subscription import&quot;, TEXT(Status) = &quot;Activated&quot;,
NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Migration Orders cannot be auto-activated. Leave them in Draft and activate after validation.</errorMessage>
</ValidationRule>