objects/Order/validationRules/Ruby__Order_Deactivation_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruby__Order_Deactivation_Not_Allowed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status),&apos;Activated&apos;), ISPICKVAL(Status, &apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Order deactivation is not allowed, if you want to cancel the order, please click the &apos;Cancel Order&apos; button</errorMessage>
</ValidationRule>