objects/Order/validationRules/Ruby__Order_With_Tax_Error_Cannot_Be_Activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruby__Order_With_Tax_Error_Cannot_Be_Activated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Ruby__TaxMessage__c)), ISPICKVAL(PRIORVALUE(StatusCode),&apos;Draft&apos;), ISPICKVAL(StatusCode,&apos;Activated&apos;))</errorConditionFormula>
    <errorMessage>The order cannot be activated because of an error in tax calculation.</errorMessage>
</ValidationRule>