objects/Order/listViews/Ruby__All_Orders.listView-meta.xml
<ListView>
    <fullName>Ruby__All_Orders</fullName>
    <columns>Ruby__Actions__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Ruby__SubscriptionStartDate__c</columns>
    <columns>Ruby__AnnualContractValue__c</columns>
    <columns>Ruby__TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Company Orders</label>
</ListView>